# Backend/src/main/java/de/sophieherstein/chat_app_backend/user/dto/UpdatePresenceVisibilityRequest.java
@@ -1,0 +1,6 @@
+package de.sophieherstein.chat_app_backend.user.dto;
+
+public record UpdatePresenceVisibilityRequest(
+        boolean visible
+) {
+}
